@@ -29,7 +29,7 @@
 	<name>Apache Felix Dependency Manager Annotation</name>
 	<description>Dependency Manager Annotation API and corresponding scanner plugins</description>
 	<artifactId>org.apache.felix.dependencymanager.annotation</artifactId>
-	<version>3.0.1-SNAPSHOT</version>
+	<version>3.1.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 	<dependencies>
 		<dependency>
